--- a/palindroma/css/style.css
+++ b/palindroma/css/style.css
@@ -4,3 +4,60 @@
     padding: 0;
     margin: 0;
 }
+
+/* Common */
+body {
+    background-color: lightcoral;
+    margin-top: 20px;
+}
+.container {
+    width: 80%;
+    margin: auto;
+    background-color: #eee;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px gray;
+    text-align: center;
+}
+h1 {
+    color: #000;
+    padding: 20px 0;
+}
+.container input,
+.btn {
+    padding: 5px;
+    border-radius: 5px;
+}
+.container input {
+    text-align: center;
+}
+.container div {
+    padding: 20px 0;
+}
+.btn {
+    display: block;
+    margin: auto;
+    font-size: 1rem;
+    background-color: orange;
+    color: #fff;
+}
+.result-container {
+    width: 30%;
+    background-color: #fff;
+    margin: 30px auto;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px gray;
+    color: #000;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.result-container.view {
+    opacity: 1;
+}
+
+/* Effetti Hover */
+.btn:hover {
+    background-color: #fff;
+    color: orange;
+}
